Issue #287 fixing captions that were invisible.

--- a/themes/custom/ts_wrin/sass/global/_wysiwyg.scss
+++ b/themes/custom/ts_wrin/sass/global/_wysiwyg.scss
@@ -220,6 +220,7 @@ blockquote {
   display: inherit;
   margin: 0 0 $space-sm;
   float: none;
+  position: relative;
 }
 .caption > * {
   display: inherit;
